--- a/AGNews/SVM.ipynb
+++ b/AGNews/SVM.ipynb
@@ -93,7 +93,7 @@
     "        svc_clf = svm.SVC(C=c, kernel=k)\n",
     "        svc_clf.fit(train_vectors, train_y)\n",
     "        pred_y = svc_clf.predict(test_vectors.toarray())\n",
-    "        acc = metric.accuracy_score(test_y, pred_y)\n",
+    "        acc = metrics.accuracy_score(test_y, pred_y)\n",
     "        \n",
     "        if acc > best_acc:\n",
     "            best_model = svc_clf\n",
