--- a/AGNews/MNB.ipynb
+++ b/AGNews/MNB.ipynb
@@ -74,7 +74,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# SVM\n",
@@ -89,7 +91,7 @@
     "    mnb = MultinomialNB(alpha=a)\n",
     "    mnb.fit(train_vectors, train_y)\n",
     "    pred_y = mnb.predict(test_vectors.toarray())\n",
-    "    acc = metric.accuracy_score(test_y, pred_y)\n",
+    "    acc = metrics.accuracy_score(test_y, pred_y)\n",
     "    \n",
     "    if acc > best_acc:\n",
     "        best_model = svc_clf\n",
